--- a/requirements.txt
+++ b/requirements.txt
@@ -19,10 +19,11 @@ scikit-learn>=1.2.2
 # Vultr Inference API support
 regex>=2022.10.31
 
-# CLI UI dependencies
+# UI dependencies
 rich>=12.5.1
 tabulate>=0.9.0
 prompt_toolkit>=3.0.38
+textual>=0.27.0
 
 # GPU support (optional)
 # Uncomment these if you want to use GPU acceleration
